# FASER

./: .gitignore  DOCKER_BUILD.md  Dockerfile  Makefile  README_anna.md  setup.sh
Analysis/: .gitignore  AnalyReco_optim.cc  Makefile
Batch/: BatchReco_optim.cc  Makefile
Charm/: .gitignore  CMakeLists.txt  CMakeLists.txt_March2025  CMakeLists.txt_org  FaserCalDisplay.cxx  FaserCalDisplay.h
CoreUtils/: DBScan.cc  DBScan.hh  TPORecoEvent.cc  TPORecoEvent.hh  recoConfig.txt
Display/: #tmp#  .gitignore  CMakeLists.txt  CMakeLists.txt_org  CMakeLists.txt_v2  CMakeLists.txt~  CoreUtilsLinkDef.h  FaserCalData.cxx  FaserCalDisplay.cxx  FaserCalDisplay.cxx_15jan2025  FaserCalDisplay.cxx_28January2025  FaserCalDisplay.cxx_August17  FaserCalDisplay.cxx_v0  FaserCalDisplay.cxx~  FaserCalDisplay.h  FaserCalDisplay.h~  FaserCalDisplay_cxx.d  Makefile  PlotGDML.C  PlotGDML.cxx  disp_linkdef.h~  tmp
tests/: CMakeLists.txt  main.cpp
